--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
     background-position: center center;
     background-repeat: no-repeat;
     background-size: 1600px, 1000px;   
-    width: 100vw;
+    width: 95vw;
     height: 100vh;
   }
   
@@ -27,7 +27,7 @@ body {
     grid-template-columns: 30% 40% 30%;
   }
   
-  nav > a {
+  nav  a {
     margin: 2% 1% 3%;
     height: 10%;
     width: 15%;
@@ -56,10 +56,10 @@ body {
   }
   
   #profile-pic {
-    width: 300px;
-    height: 300px;
+    width: 250px;
+    height: 250px;
     border-radius: 50%;
-    margin: 15% auto;
+    margin: 5% auto;
     grid-column: 2/3;
   }
   
@@ -76,12 +76,6 @@ body {
     font-style: italic;
   }
   
-  .small-text {
-    grid-column: 2/3;
-    color: white;
-    font-size: 10px;
-    margin: 3% auto;
-  }
   
   #portfolio {
     grid-column: 2/3;
@@ -115,6 +109,13 @@ body {
     text-decoration: none;
   }
 
+  .small-text {
+    grid-column: 2/3;
+    font-size: 10px;
+    margin: auto;
+  }
+  
+
   button {
     grid-column: 2/3;
     margin: 3% auto;
@@ -122,12 +123,49 @@ body {
     height: 15%;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
-    border-radius: 25px;
+    border-radius: 45px;
     background: transparent;
-    padding: 20px; 
-    padding-bottom: 5%;
+    padding: 10px; 
+    padding-bottom: 30px;
     text-align: center;
-    color: white;
+    color: black;
     letter-spacing: 16px;
     font-style: italic;
   }
+
+   @media (min-width: 376px) {
+    nav a {
+      font-size: 15px;
+    }
+    button {
+      font-size: 15px;
+      letter-spacing: 6px;
+    }
+    h1 {
+      text-align: center;
+    }
+    h2 {
+      text-align: center;
+    }
+ }
+      
+      /* Medium and up (Tablets) */
+   @media (min-width: 768px) {
+      nav a {
+        font-size: 20px;
+      }
+      button {
+        font-size: 20px;
+        letter-spacing: 10px;
+      }
+  }
+  
+  /* Large and up (Desktops) */
+   @media (min-width: 992px) {
+      nav a {
+        font-size: 25px;
+      }
+      button {
+        font-size: 25px;
+      }
+  }  
