--- a/src/hair.css
+++ b/src/hair.css
@@ -6,12 +6,42 @@ body {
   display: block;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 20px;
   width: 25%;
 }
 
-.container {
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
   display: flex;
   justify-content: center;
+}
+
+li {
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+  font-size: 1.2em;
+  font-weight: bold;
+  padding: 0px 5px 10px 5px;
+}
+
+a:hover {
+  color: teal;
+}
+
+button:hover {
+  opacity: 0.9;
+}
+
+.home {
+  color: teal;
 }
 
 .sunglass {
@@ -30,7 +60,7 @@ img {
 footer {
   background-color: black;
   color: white;
-  height: 70px;
+  height: 100px;
   margin-top: 100px;
 }
 
@@ -47,24 +77,68 @@ footer {
 .nerd {
   display: flex;
   justify-content: center;
-}
-
-.nerd p {
   text-transform: uppercase;
-  margin: 20px 105px 0px 105px;
   font-weight: bold;
   font-size: 20px;
 }
 
 #beacon {
   position: relative;
-  text-align: center;
-  color: black;
+}
+
+.text-block {
+  position: absolute;
+  bottom: 0.7rem;
+  right: 0.7rem;
+  background-color: rgba(0, 0, 0, 0);
+  color: white;
+  padding-left: 0.7em;
+  padding-right: 0.7em;
+  margin: 2em;
+  font-size: 1.5em;
 }
 
 .beacon {
   text-transform: uppercase;
   background-color: white;
   color: black;
-  font-weight: bold;
+  font-weight: 900;
+  padding: 20px;
+}
+
+.first,
+.second,
+.third {
+  background-color: black;
+  padding: 5px;
+}
+
+button {
+  padding: 15px 20px 15px 20px;
+  background-color: teal;
+}
+
+@media (max-width: 600px) {
+  .container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin: 4em;
+  }
+}
+
+@media (min-width: 600px) {
+  .container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+}
+
+@media (max-width: 1000px) {
+  .text-block {
+    position: relative;
+  }
 }
