--- a/styles/nasa.css
+++ b/styles/nasa.css
@@ -6,7 +6,7 @@ body {
 
 main {
   height: 450px;
-  background-image: url("/images/space.jpg");
+  background-image: url("images/space.jpg");
   margin-bottom: 20px;
 }
 
