--- a/styles/index-style.css
+++ b/styles/index-style.css
@@ -1,6 +1,6 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
-  background-image: url("images/work3.jpg");
+  background-image: url(images/work3.jpg);
   background-position: center center;
   background-repeat: no-repeat;
   background-size: 1600px, 1000px;
