--- a/styles/about.css
+++ b/styles/about.css
@@ -35,3 +35,18 @@ h1 {
   font-size: 1.2em;
   font-weight: bold;
 }
+
+h2,
+h3 {
+  text-align: center;
+}
+
+ul {
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  list-style-type: none;
+}
+
+li {
+}
