--- a/styles/about.css
+++ b/styles/about.css
@@ -25,6 +25,20 @@ body {
   float: right;
 }
 
+blockquote {
+  text-align: center;
+  margin: 50px;
+}
+
+p {
+  text-align: justify;
+  margin: 0;
+}
+
+hr {
+  margin: 20px 10% 20px 10%;
+}
+
 h1 {
   color: red;
   font-family: "Cinzel Decorative", cursive;
@@ -36,17 +50,53 @@ h1 {
   font-weight: bold;
 }
 
+#right:hover {
+  background-color: aqua;
+}
+
+ul {
+  text-align: center;
+  list-style-type: none;
+  padding: 0;
+}
+
+.wrapper {
+  display: grid;
+  grid-template-columns: 200px auto 200px;
+  grid-template-rows: 1fr auto;
+  grid-template-areas:
+    ". p ."
+    ". intro .";
+}
+
+.passion {
+  grid-area: p;
+}
+
+.intro {
+  grid-area: intro;
+}
+
 h2,
 h3 {
   text-align: center;
 }
 
-ul {
-  display: flex;
-  flex-direction: column;
-  text-align: left;
-  list-style-type: none;
-}
+@media (max-width: 750px) {
+  .wrapper {
+    display: grid;
+    grid-template-columns: 100px auto 100px;
+    grid-template-rows: 1fr auto;
+    grid-template-areas:
+      ". p ."
+      ". intro .";
+  }
 
-li {
+  .passion {
+    grid-area: p;
+  }
+
+  .intro {
+    grid-area: intro;
+  }
 }
