--- a/checkpoint2/styles/aboutbacon.css
+++ b/checkpoint2/styles/aboutbacon.css
@@ -1,4 +1,65 @@
 body {
   margin: 0;
   text-align: center;
+  background-color: bisque;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 50px 1fr auto;
+  grid-template-areas:
+    "t t t"
+    ". h ."
+    ". b .";
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.top {
+  grid-area: t;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 20px;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+  font-family: "Lobster", cursive;
+}
+
+.about {
+  grid-area: h;
+}
+
+iframe {
+  grid-area: b;
+  margin-top: 50px;
+}
+
+p {
+  text-align: justify;
+}
+
+h1 {
+  margin: 50px;
+}
+
+@media (min-width: 800px) {
+  iframe {
+    width: 600px;
+  }
 }
