--- a/checkpoint2/styles/article.css
+++ b/checkpoint2/styles/article.css
@@ -3,10 +3,41 @@ body {
   text-align: center;
   display: grid;
   grid-template-columns: 1fr auto 1fr;
-  grid-template-rows: 1fr 1fr;
+  grid-template-rows: 50px 1fr 1fr;
   grid-template-areas:
+    "t t t"
     ". h ."
     ". a .";
+}
+
+.top {
+  grid-area: t;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 20px;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+  font-family: "Lobster", cursive;
 }
 
 h1 {
@@ -52,4 +83,21 @@ hr {
 
 #bacon3 {
   background-color: teal;
+}
+
+@media (max-width: 900px) {
+  body {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 50px 1fr auto;
+    grid-template-areas:
+      "t"
+      "h"
+      "a";
+  }
+
+  .bottom {
+    display: flex;
+    flex-wrap: wrap;
+  }
 }
