--- a/styles/index-style.css
+++ b/styles/index-style.css
@@ -27,6 +27,10 @@ main {
   grid-template-columns: 30% 40% 30%;
 }
 
+#hello {
+  font-size: 50px;
+}
+
 nav a {
   margin: 2% 1% 3%;
   height: 10%;
