--- a/styles/portfolio-style.css
+++ b/styles/portfolio-style.css
@@ -1,8 +1,8 @@
 body {
   margin: 0;
   display: grid;
-  background-color: black;
-  color: white;
+  /* background-color: black; */
+  /* color: white; */
 }
 
 #info {
@@ -11,6 +11,7 @@ body {
   margin-right: 25%;
   width: 50%;
   text-align: center;
+  margin-top: 30px;
 }
 
 .info {
@@ -31,6 +32,7 @@ body {
   text-transform: uppercase;
   font-weight: bold;
   padding: 20px;
+  margin: 5px;
   background-color: red;
 }
 
